--- a/app.package.json
+++ b/app.package.json
@@ -47,6 +47,8 @@
     "core-js": "^2.6.1",
     "electron-editor-context-menu": "^1.1.1",
     "electron-log": "^3.0.4",
+    "ical.js": "^1.3.0",
+    "imap": "^0.8.19",
     "jquery": "^3.3.1",
     "jsel": "^1.1.6",
     "mousetrap": "^1.6.3",
