--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "electron-log": "^3.0.4",
     "electron-spellchecker": "^2.0.0",
     "ffi-napi": "^2.4.5",
+    "ical.js": "^1.3.0",
+    "imap": "^0.8.19",
     "jquery": "^3.3.1",
     "jsel": "^1.1.6",
     "mousetrap": "^1.6.3",
